--- a/config/west.yml
+++ b/config/west.yml
@@ -9,13 +9,19 @@ manifest:
       # kyek / duckyb
     - name: duckyb
       url-base: https://github.com/duckyb
+      # nice-view-gem
+    - name: m165437
+      url-base: https://github.com/M165437
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: v0.3.0
       import: app/west.yml
     - name: urchin-zmk-module
       remote: duckyb
+      revision: main
+    - name: nice-view-gem
+      remote: m165437
       revision: main
   self:
     path: config
